[package]
name = "post-automator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
git2 = "0.15.0"
serenity = "0.11.5"

tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
chrono-tz = "0.6.3"
indoc = "1.0.7"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"
